PROJECT(primalLPBound CXX)
set (primalLPBound_VERSION_MAJOR 1)
set (primalLPBound_VERSION_MINOR 1)
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fmessage-length=0")

cmake_minimum_required(VERSION 2.4)
SET(CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR} ${CMAKE_MODULE_PATH})

FIND_PACKAGE(Boost)
LINK_DIRECTORIES(${Boost_LIBRARY_DIRS})
INCLUDE_DIRECTORIES(${Boost_LIBRARY_DIRS})

INCLUDE_DIRECTORIES(
  ${PROJECT_SOURCE_DIR}/src
  ${PROJECT_SOURCE_DIR}/tests
  )

SUBDIRS(example)

OPTION(BUILD_TESTS "Build tests" ON)
IF(BUILD_TESTS)

    FIND_PACKAGE(CppUnit)
    IF(CPPUNIT_FOUND)
      INCLUDE_DIRECTORIES(${CPPUNIT_INCLUDE_DIR})

      SUBDIRS(tests)
    ELSE(CPPUNIT_FOUND)
      MESSAGE("CPPUNIT NOT FOUND!!")
    ENDIF(CPPUNIT_FOUND)

ELSE(BUILD_TESTS)
      MESSAGE("TESTING NOT ENABLED!!!")
ENDIF(BUILD_TESTS)

 
